[project]
name = "ihunt"
version = "0.1.8"
description = "Information gathering tool."
authors = [
    { name = "hdks", email = "hdks.bug@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "duckduckgo-search>=6.2.9",
    "groq>=0.10.0",
    "requests>=2.32.3",
    "google-generativeai>=0.7.2",
    "colorama>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
ihunt = "ihunt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
